--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -1,3 +1,28 @@
 body {
   font-family: Arial, Verdana, sans-serif;
 }
+a {
+  cursor: pointer;
+}
+
+.home-product {
+  background-image: url("../static/images/jumbotron/jumbotron-kickboxing.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  background-attachment: fixed;
+  background-blend-mode: overlay;
+}
+.shop-product {
+  background-image: url("../static/images/jumbotron/cedric-doumbe-1068x601.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  background-attachment: fixed;
+  background-blend-mode: overlay;
+}
+@media (min-width: 768px) {
+  #bd-docs-nav {
+    display: block;
+  }
+}
